--- a/web_app.html
+++ b/web_app.html
@@ -3069,10 +3069,10 @@
                     const baseEffect = item.baseEffect || 0.5;
                     const basePrice = item.basePrice || 1500;
                     // Показываем реальное значение из базы данных (energy_regen_rate - 1, так как базовое значение 1)
-                    currentEffect = Math.max(0, (window.userData?.energy_regen_rate || 1) - 1);
+                    currentEffect = Math.max(0, Math.round(((window.userData?.energy_regen_rate || 1) - 1) * 10) / 10);
                     nextLevelPrice = Math.floor(basePrice * Math.pow(1.4, currentLevel + 1));
-                    // Показываем прирост эффекта для следующего уровня
-                    nextLevelEffect = Math.round(baseEffect * Math.pow(1.15, currentLevel + 1) * 100) / 100;
+                    // Показываем прирост эффекта для следующего уровня (максимум 1 десятичная)
+                    nextLevelEffect = Math.round(baseEffect * Math.pow(1.15, currentLevel + 1) * 10) / 10;
                 } else if (category === 'energy_expand') {
                     const baseEffect = item.baseEffect || 50;
                     const basePrice = item.basePrice || 2000;
@@ -3108,7 +3108,6 @@
                                    item.level <= 50 ? rarityColors[45] : rarityColors[50];
                 
                 // Use calculated price and bonus for next level
-                const stats = {price: nextLevelPrice, bonus: nextLevelEffect};
                 
                 return `
                     <div style="background:${isLocked ? 'rgba(0,0,0,0.5)' : item.premium ? 'linear-gradient(135deg,rgba(255,215,0,0.15),rgba(255,237,78,0.15))' : rarityColor};padding:14px;border-radius:14px;border:2px solid ${isLocked ? 'rgba(239,68,68,0.5)' : item.premium ? 'rgba(255,215,0,0.6)' : 'rgba(102,126,234,0.4)'};position:relative;${isLocked ? 'opacity:0.6;' : ''}">
@@ -3165,15 +3164,15 @@
                                     onmousedown="if(!${isLocked}){this.style.transform='scale(0.98)';this.style.boxShadow='${item.currency === 'stars' ? '0 4px 12px rgba(255,215,0,0.4)' : '0 3px 8px rgba(102,126,234,0.4)'}'}"
                                     onmouseup="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}"
                                     onmouseleave="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}">
-                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `<span>Купить за ${item.price}</span><span style="font-size:14px;">⭐</span><span>Stars</span>` : `<span>Купить за ${stats.price.toLocaleString()}</span><span style="font-size:14px;">🪙</span>`}
+                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `<span>Купить за ${item.price}</span><span style="font-size:14px;">⭐</span><span>Stars</span>` : `<span>Купить за ${nextLevelPrice.toLocaleString()}</span><span style="font-size:14px;">🪙</span>`}
                             </button>
                         ` : `
-                            <button onclick="${isLocked ? 'tg.showAlert(\'🔒 Сначала купите предыдущий уровень\')' : item.currency === 'stars' ? `buyWithStars('${category}', ${currentLevel}, ${item.price})` : `buyShopItem('${category}', ${currentLevel}, ${stats.price}, ${index})`}" 
+                            <button onclick="${isLocked ? 'tg.showAlert(\'🔒 Сначала купите предыдущий уровень\')' : item.currency === 'stars' ? `buyWithStars('${category}', ${currentLevel}, ${item.price})` : `buyShopItem('${category}', ${currentLevel}, ${nextLevelPrice}, ${index})`}" 
                                     style="width:100%;padding:8px 12px;background:${isLocked ? 'rgba(239,68,68,0.6)' : item.currency === 'stars' ? 'linear-gradient(135deg,#ffd700,#ffed4e,#ffd700)' : 'linear-gradient(135deg,#667eea,#764ba2)'};color:${item.currency === 'stars' ? '#000' : '#fff'};border:${item.currency === 'stars' ? '1px solid #ffd700' : 'none'};border-radius:10px;cursor:${isLocked ? 'not-allowed' : 'pointer'};font-weight:700;font-size:12px;transition:all 0.3s;position:relative;overflow:hidden;box-shadow:${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'};display:flex;align-items:center;justify-content:center;gap:4px;"
                                     onmousedown="if(!${isLocked}){this.style.transform='scale(0.98)';this.style.boxShadow='${item.currency === 'stars' ? '0 4px 12px rgba(255,215,0,0.4)' : '0 3px 8px rgba(102,126,234,0.4)'}'}"
                                     onmouseup="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}"
                                     onmouseleave="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}">
-                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `<span>Купить за ${item.price}</span><span style="font-size:14px;">⭐</span><span>Stars</span>` : `<span>Купить за ${stats.price.toLocaleString()}</span><span style="font-size:14px;">🪙</span>`}
+                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `<span>Купить за ${item.price}</span><span style="font-size:14px;">⭐</span><span>Stars</span>` : `<span>Купить за ${nextLevelPrice.toLocaleString()}</span><span style="font-size:14px;">🪙</span>`}
                             </button>
                         `}
                     </div>
