--- a/web_app.html
+++ b/web_app.html
@@ -3073,8 +3073,12 @@
                     console.log('Tap boost - userMultiplier:', userMultiplier, 'window.userData:', window.userData);
                     currentEffect = Math.max(0, userMultiplier - 1);
                     nextLevelPrice = Math.floor(basePrice * Math.pow(1.5, currentLevel + 1));
-                    // Показываем прирост эффекта для следующего уровня
-                    nextLevelEffect = Math.floor(baseEffect * Math.pow(1.2, currentLevel + 1));
+                    // Показываем прирост эффекта для следующего уровня (всегда +1 для первой позиции)
+                    if (baseEffect === 1) {
+                        nextLevelEffect = 1; // Первая позиция всегда дает +1
+                    } else {
+                        nextLevelEffect = Math.floor(baseEffect * Math.pow(1.2, currentLevel + 1));
+                    }
                 } else if (category === 'energy_buy') {
                     const baseEffect = item.baseEffect || 0.5;
                     const basePrice = item.basePrice || 1500;
