--- a/web_app.html
+++ b/web_app.html
@@ -2984,31 +2984,31 @@
             'tap_boost': {
                 name: '💪 VIP Усилители Тапа',
                 items: [
-                    {level: 11, name: '🌠 Звездный Шторм', desc: '+50 кликов за тап', bonus: 51, price: 50},
-                    {level: 12, name: '🌑 Черная Дыра', desc: '+70 кликов за тап', bonus: 71, price: 100},
-                    {level: 13, name: '✨ Абсолют', desc: '+100 кликов за тап', bonus: 101, price: 200},
-                    {level: 14, name: '👑 Имперский', desc: '+140 кликов за тап', bonus: 141, price: 350},
-                    {level: 15, name: '🌟 Легендарный', desc: '+200 кликов за тап', bonus: 201, price: 500}
+                    {level: 0, name: '🌠 Звездный Шторм', desc: 'Увеличивает количество кликов за тап', currency: 'stars', locked: false, basePrice: 50, baseEffect: 51},
+                    {level: 0, name: '🌑 Черная Дыра', desc: 'Увеличивает количество кликов за тап', currency: 'stars', locked: false, basePrice: 100, baseEffect: 71},
+                    {level: 0, name: '✨ Абсолют', desc: 'Увеличивает количество кликов за тап', currency: 'stars', locked: false, basePrice: 200, baseEffect: 101},
+                    {level: 0, name: '👑 Имперский', desc: 'Увеличивает количество кликов за тап', currency: 'stars', locked: false, basePrice: 350, baseEffect: 141},
+                    {level: 0, name: '🌟 Легендарный', desc: 'Увеличивает количество кликов за тап', currency: 'stars', locked: false, basePrice: 500, baseEffect: 201}
                 ]
             },
             'energy_buy': {
                 name: '⚡ VIP Ускорение Восстановления',
                 items: [
-                    {level: 11, name: '☀️ Солнечный', desc: '+3.0 энергии/сек', bonus: 3.0, price: 40},
-                    {level: 12, name: '🌌 Галактический', desc: '+4.5 энергии/сек', bonus: 4.5, price: 80},
-                    {level: 13, name: '💫 Новая Ера', desc: '+6.0 энергии/сек', bonus: 6.0, price: 150},
-                    {level: 14, name: '⚛️ Квантовый', desc: '+8.0 энергии/сек', bonus: 8.0, price: 250},
-                    {level: 15, name: '🌠 Небесный', desc: '+10.0 энергии/сек', bonus: 10.0, price: 400}
+                    {level: 0, name: '☀️ Солнечный', desc: 'Добавляет энергию в секунду', currency: 'stars', locked: false, basePrice: 40, baseEffect: 3.0},
+                    {level: 0, name: '🌌 Галактический', desc: 'Добавляет энергию в секунду', currency: 'stars', locked: false, basePrice: 80, baseEffect: 4.5},
+                    {level: 0, name: '💫 Новая Ера', desc: 'Добавляет энергию в секунду', currency: 'stars', locked: false, basePrice: 150, baseEffect: 6.0},
+                    {level: 0, name: '⚛️ Квантовый', desc: 'Добавляет энергию в секунду', currency: 'stars', locked: false, basePrice: 250, baseEffect: 8.0},
+                    {level: 0, name: '🌠 Небесный', desc: 'Добавляет энергию в секунду', currency: 'stars', locked: false, basePrice: 400, baseEffect: 10.0}
                 ]
             },
             'energy_expand': {
                 name: '📈 VIP Расширение Энергии',
                 items: [
-                    {level: 11, name: '🌌 Галактический', desc: 'Расширить максимум на 7500', bonus: 7500, price: 60},
-                    {level: 12, name: '⚛️ Квантовый', desc: 'Расширить максимум на 12500', bonus: 12500, price: 120},
-                    {level: 13, name: '🌠 Звездный', desc: 'Расширить максимум на 20000', bonus: 20000, price: 200},
-                    {level: 14, name: '🌑 Абсолютный', desc: 'Расширить максимум на 37500', bonus: 37500, price: 350},
-                    {level: 15, name: '👑 Имперский', desc: 'Расширить максимум на 75000', bonus: 75000, price: 500}
+                    {level: 0, name: '🌌 Галактический', desc: 'Расширяет максимальный запас энергии', currency: 'stars', locked: false, basePrice: 60, baseEffect: 7500},
+                    {level: 0, name: '⚛️ Квантовый', desc: 'Расширяет максимальный запас энергии', currency: 'stars', locked: false, basePrice: 120, baseEffect: 12500},
+                    {level: 0, name: '🌠 Звездный', desc: 'Расширяет максимальный запас энергии', currency: 'stars', locked: false, basePrice: 200, baseEffect: 20000},
+                    {level: 0, name: '🌑 Абсолютный', desc: 'Расширяет максимальный запас энергии', currency: 'stars', locked: false, basePrice: 350, baseEffect: 37500},
+                    {level: 0, name: '👑 Имперский', desc: 'Расширяет максимальный запас энергии', currency: 'stars', locked: false, basePrice: 500, baseEffect: 75000}
                 ]
             },
             'autobot': {
