--- a/web_app.html
+++ b/web_app.html
@@ -2809,6 +2809,7 @@
             window.shopData['tap_boost_vip'] = vipData['tap_boost'];
             window.shopData['energy_buy_vip'] = vipData['energy_buy'];
             window.shopData['energy_expand_vip'] = vipData['energy_expand'];
+            window.shopData['autobot_vip'] = vipData['autobot'];
             
             // Load user's shop levels from database
             loadShopLevels();
@@ -2928,12 +2929,12 @@
                                         </div>
                                     ` : ''}
                                     
-                                    <button onclick="buyWithStars('${category}', ${item.level}, ${item.price})" 
+                                    <button onclick="buyWithStars('${category}', ${item.level}, ${item.basePrice || item.price})" 
                                             style="width: 100%; padding: 10px 12px; background: linear-gradient(135deg, #ffd700, #ffed4e, #ffd700); color: #000; border: 1px solid #ffd700; border-radius: 10px; cursor: pointer; font-weight: 800; font-size: 13px; transition: all 0.3s; position: relative; overflow: hidden; box-shadow: 0 4px 12px rgba(255,215,0,0.3); text-shadow: 0 1px 2px rgba(0,0,0,0.2); display: flex; align-items: center; justify-content: center; gap: 6px;"
                                             onmousedown="this.style.transform='scale(0.98)'; this.style.boxShadow='0 6px 16px rgba(255,215,0,0.4)'"
                                             onmouseup="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 12px rgba(255,215,0,0.3)'"
                                             onmouseleave="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 12px rgba(255,215,0,0.3)'">
-                                        <span>Купить за ${item.price}</span>
+                                        <span>Купить за ${item.basePrice || item.price}</span>
                                         <span style="font-size: 16px; filter: drop-shadow(0 0 3px rgba(255,215,0,0.8)); text-shadow: 0 1px 2px rgba(0,0,0,0.3);">⭐</span>
                                         <span>Telegram Stars</span>
                                     </button>
@@ -3020,11 +3021,11 @@
             'autobot': {
                 name: '🤖 VIP Автоботы',
                 items: [
-                    {level: 11, name: '🌊 Океанский Бот', desc: 'Автотап 5 дней', speed: 6, duration: 7200, price: 30},
-                    {level: 12, name: '⚛️ Квантовый Бот', desc: 'Автотап 7 дней', speed: 6.5, duration: 10080, price: 60},
-                    {level: 13, name: '🌠 Небесный Бот', desc: 'Автотап 10 дней', speed: 7, duration: 14400, price: 120},
-                    {level: 14, name: '🌋 Вулканический Бот', desc: 'Автотап 14 дней', speed: 7.5, duration: 20160, price: 200},
-                    {level: 15, name: '🌟 Звездная Власть', desc: 'Автотап 20 дней', speed: 8, duration: 28800, price: 300}
+                    {level: 0, name: '🌊 Океанский Бот', desc: 'Автотап 5 дней', speed: 6, duration: 7200, currency: 'stars', locked: false, basePrice: 30},
+                    {level: 0, name: '⚛️ Квантовый Бот', desc: 'Автотап 7 дней', speed: 6.5, duration: 10080, currency: 'stars', locked: false, basePrice: 60},
+                    {level: 0, name: '🌠 Небесный Бот', desc: 'Автотап 10 дней', speed: 7, duration: 14400, currency: 'stars', locked: false, basePrice: 120},
+                    {level: 0, name: '🌋 Вулканический Бот', desc: 'Автотап 14 дней', speed: 7.5, duration: 20160, currency: 'stars', locked: false, basePrice: 200},
+                    {level: 0, name: '🌟 Звездная Власть', desc: 'Автотап 20 дней', speed: 8, duration: 28800, currency: 'stars', locked: false, basePrice: 300}
                 ]
             }
         };
@@ -3183,12 +3184,12 @@
                             </div>
                         `}
                         ${category === 'autobot' ? `
-                            <button id="autobot-btn-${item.level}" onclick="${isLocked ? 'tg.showAlert(\'🔒 Сначала купите предыдущий уровень\')' : item.currency === 'stars' ? `buyWithStars('${category}', ${item.level}, ${item.price})` : `buyShopItem('${category}', ${item.level}, ${item.price})`}" 
+                            <button id="autobot-btn-${item.level}" onclick="${isLocked ? 'tg.showAlert(\'🔒 Сначала купите предыдущий уровень\')' : item.currency === 'stars' ? `buyWithStars('${category}', ${item.level}, ${item.basePrice || item.price})` : `buyShopItem('${category}', ${item.level}, ${item.price})`}" 
                                     style="width:100%;padding:8px 12px;background:${isLocked ? 'rgba(239,68,68,0.6)' : item.currency === 'stars' ? 'linear-gradient(135deg,#ffd700,#ffed4e,#ffd700)' : 'linear-gradient(135deg,#667eea,#764ba2)'};color:${item.currency === 'stars' ? '#000' : '#fff'};border:${item.currency === 'stars' ? '1px solid #ffd700' : 'none'};border-radius:10px;cursor:${isLocked ? 'not-allowed' : 'pointer'};font-weight:700;font-size:12px;transition:all 0.3s;position:relative;overflow:hidden;box-shadow:${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'};display:flex;align-items:center;justify-content:center;gap:4px;"
                                     onmousedown="if(!${isLocked}){this.style.transform='scale(0.98)';this.style.boxShadow='${item.currency === 'stars' ? '0 4px 12px rgba(255,215,0,0.4)' : '0 3px 8px rgba(102,126,234,0.4)'}'}"
                                     onmouseup="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}"
                                     onmouseleave="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}">
-                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `<span>Купить за ${item.basePrice || item.price}</span><span style="font-size:14px;">⭐</span><span>Stars</span>` : `<span>Купить за ${nextLevelPrice.toLocaleString()}</span><span style="font-size:14px;">🪙</span>`}
+                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `<span>Купить за ${item.basePrice || item.price}</span><span style="font-size:14px;">⭐</span><span>Stars</span>` : `<span>Купить за ${item.price.toLocaleString()}</span><span style="font-size:14px;">🪙</span>`}
                             </button>
                         ` : `
                             <button onclick="${isLocked ? 'tg.showAlert(\'🔒 Сначала купите предыдущий уровень\')' : item.currency === 'stars' ? `buyWithStars('${category}', ${currentLevel}, ${item.basePrice || item.price})` : `buyShopItem('${category}', ${currentLevel}, ${nextLevelPrice}, ${index})`}" 
