--- a/web_app.html
+++ b/web_app.html
@@ -2954,12 +2954,12 @@
         }
         
         function buyWithStars(category, level, price) {
-            // Map VIP shop items to product IDs (21-30 are VIP functions)
+            // Map VIP shop items to product IDs
             const productIdMap = {
                 'tap_boost': {0: 21, 1: 22, 2: 23, 3: 24, 4: 25},
                 'energy_buy': {0: 26, 1: 27, 2: 28, 3: 29, 4: 30},
-                'energy_expand': {0: 21, 1: 22, 2: 23, 3: 24, 4: 25},
-                'autobot': {0: 26, 1: 27, 2: 28, 3: 29, 4: 30}
+                'energy_expand': {0: 31, 1: 32, 2: 33, 3: 34, 4: 35},
+                'autobot': {0: 36, 1: 37, 2: 38, 3: 39, 4: 40}
             };
             
             const productId = productIdMap[category]?.[level] || 21;
