--- a/web_app.html
+++ b/web_app.html
@@ -2755,16 +2755,16 @@
                     emoji: '🤖',
                     items: [
                         // 10 позиций за коины (всегда 1 тап/сек)
-                        {level: 1, name: '🔩 Базовый Майнер', desc: 'Автоматический майнинг-бот на 15 минут. Простой алгоритм для начинающих крипто-энтузиастов.', speed: 1, duration: 15, price: 2000, currency: 'coins', locked: false},
-                        {level: 2, name: '⚙️ Надежный Процессор', desc: 'Улучшенный бот для майнинга на 30 минут. Использует оптимизированные алгоритмы добычи.', speed: 1, duration: 30, price: 5000, currency: 'coins', locked: false},
-                        {level: 3, name: '💫 Звездный Анализатор', desc: 'Продвинутый бот на 1 час. Анализирует рынок и выбирает оптимальные стратегии майнинга.', speed: 1, duration: 60, price: 10000, currency: 'coins', locked: false},
-                        {level: 4, name: '🚀 Ракетный Ускоритель', desc: 'Высокоскоростной бот на 2 часа. Использует передовые технологии для максимальной эффективности.', speed: 1, duration: 120, price: 20000, currency: 'coins', locked: false},
-                        {level: 5, name: '🌟 Супер-Компьютер', desc: 'Мощный майнинг-компьютер на 4 часа. Обрабатывает сложные криптографические задачи.', speed: 1, duration: 240, price: 40000, currency: 'coins', locked: false},
-                        {level: 6, name: '🔥 Плазменный Реактор', desc: 'Инновационный бот на 6 часов. Использует энергию плазмы для сверхбыстрого майнинга.', speed: 1, duration: 360, price: 80000, currency: 'coins', locked: false},
-                        {level: 7, name: '⚡ Молниеносный Процессор', desc: 'Скоростной бот на 12 часов. Мгновенно обрабатывает тысячи транзакций в секунду.', speed: 1, duration: 720, price: 160000, currency: 'coins', locked: false},
-                        {level: 8, name: '🌌 Галактический Сервер', desc: 'Космический майнинг-сервер на 1 день. Подключается к сети галактических компьютеров.', speed: 1, duration: 1440, price: 320000, currency: 'coins', locked: false},
-                        {level: 9, name: '💎 Кристальная Матрица', desc: 'Элитный бот на 2 дня. Использует кристаллические процессоры для невероятной производительности.', speed: 1, duration: 2880, price: 640000, currency: 'coins', locked: false},
-                        {level: 10, name: '👑 Квантовый Император', desc: 'Легендарный бот на 3 дня. Использует квантовые вычисления для добычи криптовалюты.', speed: 1, duration: 4320, price: 1280000, currency: 'coins', locked: false},
+                        {level: 1, name: '🤖 Базовый Бот', desc: 'Автотап на 15 минут', speed: 1, duration: 15, price: 2000, currency: 'coins', locked: false},
+                        {level: 2, name: '⚡ Улучшенный Бот', desc: 'Автотап на 30 минут', speed: 1, duration: 30, price: 5000, currency: 'coins', locked: false},
+                        {level: 3, name: '🌟 Продвинутый Бот', desc: 'Автотап на 1 час', speed: 1, duration: 60, price: 10000, currency: 'coins', locked: false},
+                        {level: 4, name: '💎 Элитный Бот', desc: 'Автотап на 2 часа', speed: 1, duration: 120, price: 20000, currency: 'coins', locked: false},
+                        {level: 5, name: '👑 Премиум Бот', desc: 'Автотап на 4 часа', speed: 1, duration: 240, price: 40000, currency: 'coins', locked: false},
+                        {level: 6, name: '🌌 Мастер Бот', desc: 'Автотап на 6 часов', speed: 1, duration: 360, price: 80000, currency: 'coins', locked: false},
+                        {level: 7, name: '💫 Легендарный Бот', desc: 'Автотап на 12 часов', speed: 1, duration: 720, price: 160000, currency: 'coins', locked: false},
+                        {level: 8, name: '🔥 Мифический Бот', desc: 'Автотап на 1 день', speed: 1, duration: 1440, price: 320000, currency: 'coins', locked: false},
+                        {level: 9, name: '⚡ Божественный Бот', desc: 'Автотап на 2 дня', speed: 1, duration: 2880, price: 640000, currency: 'coins', locked: false},
+                        {level: 10, name: '👑 Императорский Бот', desc: 'Автотап на 3 дня', speed: 1, duration: 4320, price: 1280000, currency: 'coins', locked: false},
                     ]
                 }
             };
@@ -3021,11 +3021,11 @@
             'autobot': {
                 name: '⭐ VIP Крипто-Боты',
                 items: [
-                    {level: 0, name: '🌊 Океанский Майнер', desc: 'VIP майнинг-бот на 5 дней со скоростью 6 тапов/сек. Использует энергию океанских течений для непрерывного майнинга.', speed: 6, duration: 7200, currency: 'stars', locked: false, basePrice: 100},
-                    {level: 0, name: '⚛️ Квантовый Процессор', desc: 'Эксклюзивный бот на 7 дней со скоростью 6.5 тапов/сек. Использует квантовые вычисления для максимальной эффективности.', speed: 6.5, duration: 10080, currency: 'stars', locked: false, basePrice: 200},
-                    {level: 0, name: '🌠 Небесный Сервер', desc: 'Легендарный бот на 10 дней со скоростью 7 тапов/сек. Орбитальный сервер, добывающий криптовалюту в космосе.', speed: 7, duration: 14400, currency: 'stars', locked: false, basePrice: 350},
-                    {level: 0, name: '🌋 Вулканический Реактор', desc: 'Мифический бот на 14 дней со скоростью 7.5 тапов/сек. Использует энергию вулканической магмы для сверхмощного майнинга.', speed: 7.5, duration: 20160, currency: 'stars', locked: false, basePrice: 500},
-                    {level: 0, name: '🌟 Звездная Власть', desc: 'Божественный бот на 20 дней со скоростью 8 тапов/сек. Власть над звездами для добычи криптовалюты космического уровня.', speed: 8, duration: 28800, currency: 'stars', locked: false, basePrice: 750}
+                    {level: 0, name: '⭐ VIP Базовый Бот', desc: 'VIP автотап на 5 дней', speed: 6, duration: 7200, currency: 'stars', locked: false, basePrice: 100},
+                    {level: 0, name: '⭐ VIP Улучшенный Бот', desc: 'VIP автотап на 7 дней', speed: 6.5, duration: 10080, currency: 'stars', locked: false, basePrice: 200},
+                    {level: 0, name: '⭐ VIP Продвинутый Бот', desc: 'VIP автотап на 10 дней', speed: 7, duration: 14400, currency: 'stars', locked: false, basePrice: 350},
+                    {level: 0, name: '⭐ VIP Элитный Бот', desc: 'VIP автотап на 14 дней', speed: 7.5, duration: 20160, currency: 'stars', locked: false, basePrice: 500},
+                    {level: 0, name: '⭐ VIP Премиум Бот', desc: 'VIP автотап на 20 дней', speed: 8, duration: 28800, currency: 'stars', locked: false, basePrice: 750}
                 ]
             }
         };
