Add comprehensive logging and immediate data reload for card purchases

--- a/web_app.html
+++ b/web_app.html
@@ -3363,6 +3363,19 @@
                         // Also reload shop data to update levels
                         loadShopData();
                         
+                        // Force reload cards data immediately
+                        fetch('/api/shop', {
+                            method: 'POST',
+                            headers: {'Content-Type': 'application/json'},
+                            body: JSON.stringify({user_id: userId, category: 'cards'})
+                        })
+                        .then(res => res.json())
+                        .then(shopData => {
+                            console.log('Immediate reload after purchase:', shopData);
+                            window.shopData = window.shopData || {};
+                            window.shopData.items = shopData.items || [];
+                        });
+                        
                         // Reload cards data to update levels and prices
                         fetch('/api/shop', {
                             method: 'POST',
