Add logging for item index validation in buyShopItem

--- a/web_app.html
+++ b/web_app.html
@@ -3331,6 +3331,8 @@
                 console.log('Cards array:', cards);
                 console.log('Item index:', itemIndex);
                 console.log('Actual price:', actualPrice);
+                console.log('Cards length:', cards.length);
+                console.log('Item index valid:', itemIndex >= 0 && itemIndex < cards.length);
                 
                 // Find card by index (itemIndex parameter)
                 const card = cards[itemIndex];
