--- a/Desktop/qwantum 2.0/web_app.html
+++ b/Desktop/qwantum 2.0/web_app.html
@@ -2253,14 +2253,14 @@
         
         const shopItems = {
             boosts: [
-                {name: "2x Множитель", emoji: "⚡", price: 1000, desc: "Удваивает доход с тапа", type: "multiplier_2x"},
-                {name: "5x Множитель", emoji: "🔥", price: 5000, desc: "Увеличивает доход в 5 раз", type: "multiplier_5x"},
-                {name: "10x Множитель", emoji: "💥", price: 20000, desc: "x10 к каждому тапу!", type: "multiplier_10x"},
+                {name: "2x Множитель", emoji: "⚡", price: 1000, desc: "Усиливает ваши тапы и увеличивает количество кликов", type: "multiplier_2x"},
+                {name: "5x Множитель", emoji: "🔥", price: 5000, desc: "Мощно усиливает ваши тапы и увеличивает количество кликов", type: "multiplier_5x"},
+                {name: "10x Множитель", emoji: "💥", price: 20000, desc: "Максимально усиливает ваши тапы и увеличивает количество кликов", type: "multiplier_10x"},
             ],
             automation: [
-                {name: "🤖 Авто-бот тапов", emoji: "🤖", price: 50000, desc: "Автоматически тапает за вас (5/сек)", type: "auto_bot"},
-                {name: "⚡ Двойная энергия", emoji: "⚡", price: 30000, desc: "Максимум энергии: 2000", type: "double_energy"},
-                {name: "🔄 Ускорение регенерации", emoji: "🔄", price: 40000, desc: "Энергия восстановливается быстрее", type: "regen_boost"},
+                {name: "🤖 Авто-бот тапов", emoji: "🤖", price: 50000, desc: "Автоматически тапает за вас", type: "auto_bot"},
+                {name: "⚡ Двойная энергия", emoji: "⚡", price: 30000, desc: "Увеличивает максимальный запас вашей энергии", type: "double_energy"},
+                {name: "🔄 Ускорение регенерации", emoji: "🔄", price: 40000, desc: "Ускоряет автоматическое восстановление вашей энергии", type: "regen_boost"},
             ],
             energy: [
                 {name: "Энергия +50", emoji: "⚡", price: 1000, amount: 50},
@@ -3121,22 +3121,7 @@
                                 <div style="font-size:11px;color:#94a3b8;">${item.desc}</div>
                             </div>
                         </div>
-                        ${category === 'tap_boost' ? `
-                            <div style="background:rgba(102,126,234,0.2);padding:8px;border-radius:8px;margin-bottom:8px;display:flex;justify-content:space-between;align-items:center;">
-                                <span style="color:#a78bfa;font-size:12px;font-weight:700;">💪 Кликов за тап:</span>
-                                <span style="color:#4ade80;font-size:13px;font-weight:800;">+${stats.bonus}</span>
-                            </div>
-                        ` : category === 'energy_buy' ? `
-                            <div style="background:rgba(251,191,36,0.2);padding:8px;border-radius:8px;margin-bottom:8px;display:flex;justify-content:space-between;align-items:center;">
-                                <span style="color:#fbbf24;font-size:12px;font-weight:700;">⚡ Добавить:</span>
-                                <span style="color:#4ade80;font-size:13px;font-weight:800;">+${stats.bonus} энергии/сек</span>
-                            </div>
-                        ` : category === 'energy_expand' ? `
-                            <div style="background:rgba(236,72,153,0.2);padding:8px;border-radius:8px;margin-bottom:8px;display:flex;justify-content:space-between;align-items:center;">
-                                <span style="color:#ec4899;font-size:12px;font-weight:700;">📈 Расширить максимум энергии на:</span>
-                                <span style="color:#4ade80;font-size:13px;font-weight:800;">+${stats.bonus.toLocaleString()}</span>
-                            </div>
-                        ` : `
+                        ${category === 'autobot' ? `
                             <div style="background:rgba(16,185,129,0.2);padding:8px;border-radius:8px;margin-bottom:8px;">
                                 <div style="display:flex;justify-content:space-between;align-items:center;">
                                     <span style="color:#10b981;font-size:12px;font-weight:700;">⏱️ Длительность:</span>
@@ -3149,7 +3134,7 @@
                                 </div>
                                 ` : ''}
                             </div>
-                        `}
+                        ` : ''}
                         ${category === 'autobot' ? `
                             <button id="autobot-btn-${item.level}" onclick="${isLocked ? 'tg.showAlert(\'🔒 Сначала купите предыдущий уровень\')' : item.currency === 'stars' ? `buyWithStars('${category}', ${item.level}, ${item.price})` : `buyShopItem('${category}', ${item.level}, ${item.price})`}" 
                                     style="width:100%;padding:8px 12px;background:${isLocked ? 'rgba(239,68,68,0.6)' : item.currency === 'stars' ? 'linear-gradient(135deg,#ffd700,#ffed4e,#ffd700)' : 'linear-gradient(135deg,#667eea,#764ba2)'};color:${item.currency === 'stars' ? '#000' : '#fff'};border:${item.currency === 'stars' ? '1px solid #ffd700' : 'none'};border-radius:10px;cursor:${isLocked ? 'not-allowed' : 'pointer'};font-weight:700;font-size:12px;transition:all 0.3s;position:relative;overflow:hidden;box-shadow:${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'};display:flex;align-items:center;justify-content:center;gap:4px;"
